--- a/src/public/css/order.css
+++ b/src/public/css/order.css
@@ -1,35 +1,15 @@
-.factura {
-    table-layout: fixed;
-  }
-  
-  .fact-info > div > h5 {
-    font-weight: bold;
-  }
-  
-  .factura > thead {
-    border-top: solid 3px #000;
-    border-bottom: 3px solid #000;
-    background-color: black;
-    color: white;
-  }
+.header {
+  background-color: red;
+  color: white; 
+}
 
-  .factura > thead > tr > th:nth-child(2), .factura > tbod > tr > td:nth-child(2) {
-    width: 300px;
-  }
-  
-  .factura > thead > tr > th:nth-child(n+3) {
-    text-align: right;
-  }
-  
-  .factura > tbody > tr > td:nth-child(n+3) {
-    text-align: right;
-  }
-  
-  .factura > tfoot > tr > th, .factura > tfoot > tr > th:nth-child(n+3) {
-    font-size: 24px;
-    text-align: right;
-  }
-  
-  .cond {
-    border-top: solid 2px #000;
-  }
+.font-ty{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.logo-container{
+  margin-left: 120px;
+  margin-right: 160px;
+}
+
+.fact-container-details { float:left;margin-left:5px; }
