--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,9 +1,13 @@
+@import './nav.css';
+
 .bg-secondary {
   background-color: #2c3e50 !important;
 }
 
 .copyright {
-  background-color: #1a252f;
+  background-color: #fff;
+  color: #000;
+  font-style: italic;
 }
 
 nav{
