--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,5 +1,6 @@
 @import './nav.css';
 @import './car.css';
+@import './form.css';
 
 .bg-secondary {
   background-color: #2c3e50 !important;
@@ -18,4 +19,21 @@ nav{
 .img-card{
   height: 18vw;
   object-fit: cover;
+}
+
+.action-bg-color{
+  background-color: black;
+  color: white;
+}
+
+.action-bg-color:hover{
+  background-color: white;
+  color: black;
+  border-width: 1px;
+  border-color: black;
+}
+
+.card-header{
+  background-color: black;
+  color: white;
 }
