--- a/src/public/css/app.css
+++ b/src/public/css/app.css
@@ -1,6 +1,8 @@
 @import './nav.css';
 @import './car.css';
 @import './form.css';
+@import './profile.css';
+
 
 .bg-secondary {
   background-color: #2c3e50 !important;
