Refactor log out button to profile view

--- a/src/public/css/profile.css
+++ b/src/public/css/profile.css
@@ -2,3 +2,9 @@
     background-color: black;
     color: white;
 }
+
+.profile-info-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
