--- a/src/public/css/car.css
+++ b/src/public/css/car.css
@@ -1,10 +1,10 @@
 .bt-bg-color{
-    background-color: #ca4e01;
+    background-color: #e25700;
     color: white;
 }
 
 .bt-bg-color:hover{
-    background-color: #ca4e01;;
+    background-color: #e25700;
     color: white;
     border-width: 1px;
     border-color: #ca4e01;
