Fix style + include lang in the new function

--- a/src/public/css/map.css
+++ b/src/public/css/map.css
@@ -33,16 +33,16 @@ table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  left: 0;
+  margin-left: 40px;
   position: relative;
-  top: 0;
   width: 440px;
   z-index: 1;
 }
 
 #map {
   margin-top: 40px;
-  width: 440px;
+  margin-left: 40px;
+  width: 900px;
 }
 
 #listing {
@@ -50,7 +50,7 @@ table {
   width: 200px;
   height: 470px;
   overflow: auto;
-  left: 442px;
+  left: 942px;
   top: 235px;
   cursor: pointer;
   overflow-x: hidden;
